--- a/index.html
+++ b/index.html
@@ -149,12 +149,14 @@
  <script>
   function redirect() {
     const country = sessionStorage.getItem('country');
-    if (country === "SE") {
-      window.location.href = "https://cbdflora.se/collections/cbd-olja";
-    } else {
-      window.location.href = "https://cbdflora.com/collections/cbd-oil";
-    }
-  }
+ if (country === "SE" && hostname.includes("cbdflora.com")) {
+  window.location.href = "https://cbdflora.se";
+} else if (country === "DE") {
+  window.location.href = "https://cbdflora.com/de/collections/cbd-oil";
+} else if (country === "FR") {
+  window.location.href = "https://cbdflora.com/fr/collections/cbd-oil";
+}
+
 
   function deny() {
     alert("Du måste vara över 18 år för att fortsätta.");
