--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="sv">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Altersverifikation</title>
+  <title>Åldersverifiering</title>
   <style>
     body {
       margin: 0;
@@ -60,10 +60,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Bist du über 18 Jahre alt?</h1>
-    <p>Du musst über 18 Jahre alt sein, um diese Website zu nutzen.</p>
+    <h1>Är du över 18 år?</h1>
+    <p>Du måste vara över 18 år för att använda denna webbplats.</p>
     <button class="btn" onclick="redirect()">Ja</button>
-    <button class="btn btn-secondary" onclick="deny()">Nein</button>
+    <button class="btn btn-secondary" onclick="deny()">Nej</button>
   </div>
 
   <script>
@@ -71,7 +71,7 @@
       window.location.href = "https://cbdflora.com/de/collections/cbd-oil";
     }
     function deny() {
-      alert("Du musst über 18 Jahre alt sein, um fortzufahren.");
+      alert("Du måste vara över 18 år för att fortsätta.");
     }
   </script>
 </body>
