--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <script>
     function redirect() {
-      window.location.href = "https://cbdflora.com/de/collections/cbd-oil";
+      window.location.href = "https://cbdflora.se/collections/cbd-olja";
     }
     function deny() {
       alert("Du måste vara över 18 år för att fortsätta.");
