--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="de">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Åldersverifiering</title>
+  <title>Altersverifizierung</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      background-color: #f6f5ee;
+      background: url("assets/cbd-flora-sky.jpg") no-repeat center center fixed;
+      background-size: cover;
       font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
@@ -17,7 +18,7 @@
       overflow: hidden;
     }
     .container {
-      background-color: #ffffff;
+      background-color: rgba(255, 255, 255, 0.9);
       padding: 40px;
       border-radius: 16px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
@@ -60,18 +61,18 @@
 </head>
 <body>
   <div class="container">
-    <h1>Är du över 18 år?</h1>
-    <p>Du måste vara över 18 år för att använda denna webbplats.</p>
+    <h1>Bist du über 18 Jahre alt?</h1>
+    <p>Du musst über 18 Jahre alt sein, um diese Website zu besuchen.</p>
     <button class="btn" onclick="redirect()">Ja</button>
-    <button class="btn btn-secondary" onclick="deny()">Nej</button>
+    <button class="btn btn-secondary" onclick="deny()">Nein</button>
   </div>
 
   <script>
     function redirect() {
-      window.location.href = "https://cbdflora.se/collections/cbd-olja";
+      window.location.href = "https://cbdflora.com/collections/all-products";
     }
     function deny() {
-      alert("Du måste vara över 18 år för att fortsätta.");
+      alert("Du musst über 18 Jahre alt sein, um fortzufahren.");
     }
   </script>
 </body>
