--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Altersverifizierung</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      background: url("assets/cbd-flora-sky.jpg") no-repeat center center fixed;
+      background: url("cbd-flora-sky.jpg") no-repeat center center fixed;
       background-size: cover;
       font-family: Arial, sans-serif;
       display: flex;
