--- a/index.html
+++ b/index.html
@@ -1,79 +1,122 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Altersverifizierung</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: url("cbd-flora-sky.jpg") no-repeat center center fixed;
-      background-size: cover;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100dvh;
-      overflow: hidden;
-    }
-    .container {
-      background-color: rgba(255, 255, 255, 0.9);
-      padding: 40px;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      text-align: center;
-      max-width: 400px;
-      width: 90%;
-    }
-    h1 {
-      margin-bottom: 20px;
-      color: #8EBF2A;
-    }
-    p {
-      margin-bottom: 30px;
-      color: #555;
-    }
-    .btn {
-      background-color: #8EBF2A;
-      color: #ffffff;
-      padding: 12px 24px;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      font-size: 16px;
-      margin: 10px;
-      width: 120px;
-      transition: background-color 0.3s ease;
-    }
-    .btn:hover {
-      background-color: #6f991f;
-    }
-    .btn-secondary {
-      background-color: transparent;
-      color: #000000;
-      border: 1px solid #000000;
-    }
-    .btn-secondary:hover {
-      background-color: #999999;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Altersverifizierung - cbdFlora®</title>
+<style>
+  body, html {
+    margin: 0; padding: 0; height: 100%;
+    font-family: Arial, sans-serif;
+    background: url("cbd-flora-sky.jpg") no-repeat center center fixed;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .modal {
+    background-color: rgba(255,255,255,0.95);
+    padding: 40px 30px;
+    border-radius: 16px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    max-width: 420px;
+    width: 90%;
+    text-align: center;
+  }
+  /* Logo placeholder - byt ut mot din SVG */
+  #logo {
+    width: 245px;
+    height: 53px;
+    margin: 0 auto 25px;
+    display: block;
+  }
+  h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #8EBF2A;
+    font-weight: 700;
+  }
+  p {
+    font-size: 14px;
+    color: #333;
+    margin-bottom: 30px;
+  }
+  .pill-button {
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 0.36px;
+    line-height: 18px;
+    padding: 11px 40px;
+    border-radius: 40px;
+    cursor: pointer;
+    border: 2px solid #8EBF2A;
+    color: #8EBF2A;
+    background-color: transparent;
+    margin: 0 15px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    user-select: none;
+  }
+  .pill-button:hover {
+    background-color: #8EBF2A;
+    color: white;
+  }
+  .legal {
+    font-size: 11px;
+    color: #666;
+    margin-top: 25px;
+  }
+  .legal a {
+    color: #8EBF2A;
+    text-decoration: none;
+  }
+  .legal a:hover {
+    text-decoration: underline;
+  }
+  .deny-message {
+    display: none;
+    margin-top: 20px;
+    font-weight: 700;
+    color: #D32F2F;
+  }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h1>Bist du über 18 Jahre alt?</h1>
-    <p>Du musst über 18 Jahre alt sein, um diese Website zu besuchen.</p>
-    <button class="btn" onclick="redirect()">Ja</button>
-    <button class="btn btn-secondary" onclick="deny()">Nein</button>
-  </div>
 
-  <script>
-    function redirect() {
-      window.location.href = "https://cbdflora.com/collections/all-products";
-    }
-    function deny() {
-      alert("Du musst über 18 Jahre alt sein, um fortzufahren.");
-    }
-  </script>
+<div class="modal">
+  <!-- Här kan du klistra in din SVG logga om du vill -->
+  <svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 245 53" fill="#8EBF2A">
+    <text x="0" y="35" font-family="Arial" font-size="32" font-weight="700">cbdFlora®</text>
+  </svg>
+
+  <h1>Bist du über 18 Jahre alt?</h1>
+  <p>Du musst mindestens 18 Jahre alt sein, um unsere Website zu besuchen.</p>
+
+  <button class="pill-button" id="yesBtn">Ja</button>
+  <button class="pill-button" id="noBtn">Nein</button>
+
+  <div class="deny-message" id="denyMsg">Entschuldigung, du musst mindestens 18 Jahre alt sein, um die Seite zu betreten.</div>
+
+  <div class="legal">
+    <p>Mit einem Klick auf „Ja“ bestätige ich, dass ich mindestens 18 Jahre alt bin und akzeptiere die <a href="/terms" target="_blank" rel="noopener">Nutzungsbedingungen</a> sowie die <a href="/privacy" target="_blank" rel="noopener">Datenschutzrichtlinie</a>.</p>
+  </div>
+</div>
+
+<script>
+  const yesBtn = document.getElementById('yesBtn');
+  const noBtn = document.getElementById('noBtn');
+  const denyMsg = document.getElementById('denyMsg');
+
+  yesBtn.addEventListener('click', () => {
+    // Skicka vidare till produktsidan
+    window.location.href = "https://cbdflora.com/collections/all-products";
+  });
+
+  noBtn.addEventListener('click', () => {
+    denyMsg.style.display = 'block';
+  });
+</script>
+
 </body>
 </html>
