--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <div class="modal" id="ageGate">
     <img id="logo" src="LOGO-MAIN_1.webp" alt="cbdFlora Logo" />
     <div class="heading">
-      <p>Bist du in deiner Region volljährig, um CBD-Produkte zu kaufen?</p>
+      <p>Bist du mindestens 18 Jahre alt?</p>
     </div>
     <div class="buttons">
       <button class="pill-button yes-button" onclick="redirect()">Ja</button>
