--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url("cbd-flora-sky.jpg") no-repeat center center fixed;
+      background: url("fantastic-cloudscape.jpg") no-repeat center center fixed;
       background-size: cover;
       font-family: Arial, sans-serif;
       display: flex;
