--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <button class="pill-button no-button" onclick="deny()">Nein</button>
     </div>
     <div class="legal">
-      <p>Mit Klick auf „Ja“ bestätige ich, dass ich mindestens 18 Jahre alt bin und akzeptiere die <a href="/terms" target="_blank" rel="noopener">Nutzungsbedingungen</a> sowie die <a href="/privacy" target="_blank" rel="noopener">Datenschutzrichtlinie</a>.</p>
+      <p>Mit Klick auf „Ja“ bestätige ich, dass ich mindestens 18 Jahre alt bin und akzeptiere die <a href="https://cbdflora.com/de/pages/terms-of-service" target="_blank" rel="noopener">Nutzungsbedingungen</a> sowie die <a href="https://cbdflora.com/de/pages/privacy-policy" target="_blank" rel="noopener">Datenschutzrichtlinie</a>.</p>
     </div>
     <div class="deny-content" id="denyMessage">
       <div class="heading">Entschuldigung, du musst mindestens 18 Jahre alt sein, um die Seite zu betreten.</div>
