--- a/index.html
+++ b/index.html
@@ -43,23 +43,33 @@
       gap: 20px;
       margin-bottom: 20px;
     }
-    .pill-button {
-      text-transform: uppercase;
-      font-size: 14px;
-      font-weight: 700;
-      padding: 12px 40px;
-      border: 2px solid #8EBF2A;
-      border-radius: 40px;
-      background-color: transparent;
-      color: #8EBF2A;
-      cursor: pointer;
-      transition: background-color 0.3s ease, color 0.3s ease;
-      white-space: nowrap;
-    }
-    .pill-button:hover {
-      background-color: #8EBF2A;
-      color: #fff;
-    }
+ .pill-button {
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+    padding: 12px 40px;
+    border: 2px solid #8EBF2A;
+    border-radius: 40px;
+    background-color: transparent;
+    color: #8EBF2A;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    white-space: nowrap;
+  }
+  .pill-button:hover {
+    background-color: #8EBF2A;
+    color: #fff;
+  }
+
+  /* JA-knappen – fylls direkt */
+  .yes-button {
+    background-color: #8EBF2A;
+    color: #fff;
+  }
+  .yes-button:hover {
+    background-color: #76A823; /* lite mörkare vid hover */
+    color: #fff;
+  }
     .legal {
       font-size: 11px;
       color: #999;
